--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -2,6 +2,11 @@
     margin-right: 5px;
 }
 
+.dictList {
+    max-height: 300px;
+    overflow-y: scroll;
+}
+
 @import '../../node_modules/bootstrap/less/alerts.less';
 @import '../../node_modules/bootstrap/less/badges.less';
 @import '../../node_modules/bootstrap/less/bootstrap.less';
