dictionary pane work

--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -77,3 +77,4 @@
 @import '../../node_modules/bootstrap/less/mixins/text-emphasis.less';
 @import '../../node_modules/bootstrap/less/mixins/text-overflow.less';
 @import '../../node_modules/bootstrap/less/mixins/vendor-prefixes.less';
+@icon-font-path: "/assets/";
