--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -7,6 +7,24 @@
     overflow-y: scroll;
 }
 
+.keyedBlackLabResults {
+    max-height: 100px;
+    overflow-y: scroll;
+}
+
+.leftContext {
+    text-align: right;
+}
+.rightContext {
+    text-align: left;
+}
+.hit {
+    text-align: center;
+}
+.highlighted {
+    color: green;
+}
+
 @import '../../node_modules/bootstrap/less/alerts.less';
 @import '../../node_modules/bootstrap/less/badges.less';
 @import '../../node_modules/bootstrap/less/bootstrap.less';
