added pagination, error handling

--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -22,7 +22,8 @@
     text-align: center;
 }
 .highlighted {
-    color: green;
+    color: blue;
+    font-weight: bold;
 }
 
 @import '../../node_modules/bootstrap/less/alerts.less';
