--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -31,7 +31,7 @@
     color: blue;
     font-weight: bold;
 }
-
+@import 'tree.less';
 @import '../../node_modules/bootstrap/less/alerts.less';
 @import '../../node_modules/bootstrap/less/badges.less';
 @import '../../node_modules/bootstrap/less/bootstrap.less';
