--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -1,3 +1,10 @@
+.vslider {
+    writing-mode: bt-lr; /* IE */
+    -webkit-appearance: slider-vertical; /* WebKit */
+    width: 8px;
+    height: 75px;
+    padding: 0 5px;
+}
 .rowKey {
     white-space: nowrap
 }
