--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -18,6 +18,27 @@
     margin-right: 5px;
 }
 
+.dataTable {
+    border: 1px solid lightgray;
+}
+
+.dataTable td {
+    padding: 5px;
+    margin: 5px;
+}
+
+.dataTable th {
+    padding: 5px;
+    margin: 5px;
+}
+
+.dataTable tr td:first-child {
+    width: 1%;
+    white-space: nowrap;
+    border-top: 0px;
+    border-right: 0px;
+}
+
 .dictList {
     max-height: 300px;
     overflow-y: scroll;
