small style fixes

--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -20,6 +20,7 @@
 
 .dataTable {
     border: 1px solid lightgray;
+    width: 100%;
 }
 
 .dataTable td {
@@ -33,10 +34,11 @@
 }
 
 .dataTable tr td:first-child {
-    width: 1%;
+    width: 106px;
     white-space: nowrap;
     border-top: 0px;
     border-right: 0px;
+    text-align: right;
 }
 
 .dictList {
