--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -18,19 +18,34 @@
     margin-right: 5px;
 }
 
-.dataTable {
+.dataTableContainer {
     border: 1px solid lightgray;
+    width: 100%;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top: 0px;
+    padding: 15px;
+}
+
+.dataTable {
+    border: 0px;
     width: 100%;
 }
 
 .dataTable td {
     padding: 5px;
     margin: 5px;
+    text-align: center;
 }
 
 .dataTable th {
     padding: 5px;
     margin: 5px;
+    text-align: center;
+}
+
+.dataTable input {
+    text-align: center;
 }
 
 .dataTable tr td:first-child {
