make table panels not act weird

--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -5,6 +5,9 @@
     height: 75px;
     padding: 0 5px;
 }
+.panel-collapse.in {
+    height: auto !important;
+}
 .rowKey {
     white-space: nowrap
 }
@@ -19,6 +22,7 @@
 }
 
 .dataTableContainer {
+    background-color:white;
     border: 1px solid lightgray;
     width: 100%;
     border-bottom-left-radius: 4px;
