smaller font for queryviewer

--- a/webapp/app/css/tree.less
+++ b/webapp/app/css/tree.less
@@ -2,6 +2,10 @@
 /*Now the CSS*/
 * {margin: 0; padding: 0;}
 
+.queryViewer * {
+    font-size: 8pt !important;
+}
+
 ul.tree {
     padding-top: 20px; position: relative;
     
