Query suggestion doc and style cleanup

--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -85,6 +85,29 @@
     font-weight: bold;
 }
 
+#suggestion-table {
+  font-size: small;
+  border-collapse: collapse;
+}
+
+.queryCell {
+    white-space: nowrap;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+}
+
+.queryHeader {
+   white-space: nowrap;
+}
+
+.queryStat {
+  text-align: center;
+}
 
 @import 'tree.less';
 @import '../../node_modules/bootstrap/less/alerts.less';
@@ -158,37 +181,3 @@
 @import '../../node_modules/bootstrap/less/mixins/text-overflow.less';
 @import '../../node_modules/bootstrap/less/mixins/vendor-prefixes.less';
 @icon-font-path: "/assets/";
-
-#suggestion-menu .dropdown-menu {
-    flex-wrap: wrap;
-    role: none;
-}
-
-#suggestion-menu .labelStrength {
-    margin-left: auto;
-}
-
-#suggestion-table {
-  font-size: small;
-  border-collapse: collapse;
-}
-
-
-.queryCell {
-    white-space: nowrap;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    cursor: default;
-}
-
-.queryHeader {
-   cursor: default;
-}
-
-.queryStat {
-  text-align: center;
-}
