--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -1,89 +1,3 @@
-.vslider {
-    writing-mode: bt-lr; /* IE */
-    -webkit-appearance: slider-vertical; /* WebKit */
-    width: 8px;
-    height: 75px;
-    padding: 0 5px;
-}
-.panel-collapse.in {
-    height: auto !important;
-}
-.rowKey {
-    white-space: nowrap
-}
-.mainContent {
-    padding: 20px;
-}
-.searchForm {
-    margin-top: 10px;
-}
-.wordData {
-    margin-right: 5px;
-}
-
-.dataTableContainer {
-    background-color:white;
-    border: 1px solid lightgray;
-    width: 100%;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top: 0px;
-    padding: 15px;
-}
-
-.dataTable {
-    border: 0px;
-    width: 100%;
-}
-
-.dataTable td {
-    padding: 5px;
-    margin: 5px;
-    text-align: center;
-}
-
-.dataTable th {
-    padding: 5px;
-    margin: 5px;
-    text-align: center;
-}
-
-.dataTable input {
-    text-align: center;
-}
-
-.dataTable tr td:first-child {
-    width: 106px;
-    white-space: nowrap;
-    border-top: 0px;
-    border-right: 0px;
-    text-align: right;
-}
-
-.dictList {
-    max-height: 300px;
-    overflow-y: scroll;
-}
-
-.keyedBlackLabResults {
-    max-height: 100px;
-    overflow-y: scroll;
-}
-
-.leftContext {
-    text-align: right;
-}
-.rightContext {
-    text-align: left;
-}
-.hit {
-    text-align: center;
-}
-.highlighted {
-    color: blue;
-    font-weight: bold;
-}
-@import 'tree.less';
 @import '../../node_modules/bootstrap/less/alerts.less';
 @import '../../node_modules/bootstrap/less/badges.less';
 @import '../../node_modules/bootstrap/less/bootstrap.less';
@@ -154,4 +68,7 @@
 @import '../../node_modules/bootstrap/less/mixins/text-emphasis.less';
 @import '../../node_modules/bootstrap/less/mixins/text-overflow.less';
 @import '../../node_modules/bootstrap/less/mixins/vendor-prefixes.less';
+@import '_app.less';
+@import '_corpora.less';
+@import '_tree.less';
 @icon-font-path: "/assets/";
