--- a/webapp/app/css/_app.less
+++ b/webapp/app/css/_app.less
@@ -100,3 +100,27 @@ header {
   height: 100%;
   width: 100%;
 }
+
+#suggestion-table {
+  font-size: small;
+  border-collapse: collapse;
+}
+
+.queryCell {
+    white-space: nowrap;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+}
+
+.queryHeader {
+   white-space: nowrap;
+}
+
+.queryStat {
+  text-align: center;
+}
