--- a/webapp/app/css/main.less
+++ b/webapp/app/css/main.less
@@ -70,5 +70,6 @@
 @import '../../node_modules/bootstrap/less/mixins/vendor-prefixes.less';
 @import '_app.less';
 @import '_corpora.less';
+@import '_header.less';
 @import '_tree.less';
 @icon-font-path: "/assets/";
