Makes sort order optional

--- a/webapp/app/css/_app.less
+++ b/webapp/app/css/_app.less
@@ -125,3 +125,12 @@ header {
 .queryStat {
   text-align: center;
 }
+
+.order-by-dropdown {
+  float: right;
+}
+
+.order-by-dropdown-entry {
+  padding: 0;
+  font-size: 10pt;
+}
