--- a/webapp/app/css/_app.less
+++ b/webapp/app/css/_app.less
@@ -126,3 +126,11 @@
   padding: 0;
   font-size: 10pt;
 }
+
+.nav-pills>li.active>a {
+  &:hover,&:active,&:focus,& {
+    button {
+      color: #ffffff;
+    }
+  }
+}
