--- a/webapp/app/css/_header.less
+++ b/webapp/app/css/_header.less
@@ -20,4 +20,12 @@ header {
       width: 24px;
     }
   }
+
+  .header1 {
+    margin: 0 0 0 0;
+  }
+
+  .header2 {
+    margin: 0 0 16px 0;
+  }
 }
