Changes per Sam

--- a/webapp/app/css/_header.less
+++ b/webapp/app/css/_header.less
@@ -1,6 +1,6 @@
 
 header {
-  padding: 0 20px;
+  padding: 0 0 16px 0;
 
   .btn-group {
     margin-top: 12px;
@@ -19,13 +19,5 @@ header {
       margin-right: 10px;
       width: 24px;
     }
-  }
-
-  .header1 {
-    margin: 0 0 0 0;
-  }
-
-  .header2 {
-    margin: 0 0 16px 0;
   }
 }
